--- a/packages/core/src/style/_variable.scss
+++ b/packages/core/src/style/_variable.scss
@@ -142,6 +142,7 @@ $bg-colors: (
   'pri':  $bg-block-primary,
   'sec':  $bg-block-secondary,
   'ter':  $bg-block-tertiary,
+  'dark': $bg-block-dark
 ) !default;
 
 $layout: null !default;
