--- a/packages/core/src/style/_mixin.scss
+++ b/packages/core/src/style/_mixin.scss
@@ -268,7 +268,7 @@
 
 @mixin make-input($font-size: $input-font-size, $color: $input-color, $padding: $input-padding, $line-height: $input-line-height, $border-color: $input-border-color){
     $input-made: true !global;
-    .ant-input-affix-wrapper, input, textarea, .ant-input, .ant-select:not(.ant-select-customize-input) .ant-select-selector{
+    .ant-input-affix-wrapper, input, textarea, .ant-input, .ant-picker, .ant-select:not(.ant-select-customize-input) .ant-select-selector{
         border-color: $border-color !important;
         border-radius: $border-radius-sm !important;
         border-width: $border-width;
